@@ -6,6 +6,7 @@
  - Fixed a bug in the MySQL database driver.
  - Fixed missing tags when downloading from Jamendo.
  - Fixed missing schedule update (cron).
+ - Fixed ISE handling in contrib/newswire url shortener.
  - Added history for twitter-fetcher (contrib).
  - Added an option to disable voting (config).
  - Added automatic promotion of most active voters to admins.
